Added base info for all projects and completed all basic features

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 	<div class="menu">
 		<a tabindex="0" id="menu-button"><span>Menu</span></a>
 		<ul>
-			<li><a href="/#games"><span>Games</span></a></li>
+			<li><a href="/#solo-games"><span>Games</span></a></li>
 			<li><a href="/#other"><span>Other Projects</span></a></li>
 		</ul>
 	</div>
