Made blue less aggressive

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -2,7 +2,7 @@
 ---
 
 $menu-height: calc(63px + 1rem);
-$background-color: #0f13d9;
+$background-color: #2a2dcf;
 $background-button-color: #0066ff;
 
 
